--- a/Jenkinsfile/pom.xml
+++ b/Jenkinsfile/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.example</groupId>
-    <artifactId>my-web-app</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-war-plugin</artifactId>
+    <version>3.3.0</version>
     <packaging>war</packaging>
 
     <dependencies>
